--- a/src/main/resources/seed/categories/data-integration.yaml
+++ b/src/main/resources/seed/categories/data-integration.yaml
@@ -2,31 +2,31 @@ name: Data & Integration
 skills:
   - name: Data Architecture
     levels:
-      basic: Begrijpt basis database normalisatie en schema design
-      decent: Ontwerpt relationele datamodellen, begrijpt CAP theorem
-      good: Past data modeling patterns toe, balanceert ACID vs BASE trade-offs
-      excellent: Architecteert enterprise datamodellen, definieert data governance strategieën
+      basis: Begrijpt basis database normalisatie en schema design
+      redelijk: Ontwerpt relationele datamodellen, begrijpt CAP theorem
+      goed: Past data modeling patterns toe, balanceert ACID vs BASE trade-offs
+      uitstekend: Architecteert enterprise datamodellen, definieert data governance strategieën
   - name: NoSQL Databases
     levels:
-      basic: Begrijpt verschillen tussen relationele en NoSQL databases
-      decent: Gebruikt document stores (MongoDB) of key-value stores (Redis) voor specifieke use cases
-      good: Kiest juiste database type per use case, implementeert polyglot persistence
-      excellent: Architecteert gedistribueerde data systemen, optimaliseert consistency vs availability
+      basis: Begrijpt verschillen tussen relationele en NoSQL databases
+      redelijk: Gebruikt document stores (MongoDB) of key-value stores (Redis) voor specifieke use cases
+      goed: Kiest juiste database type per use case, implementeert polyglot persistence
+      uitstekend: Architecteert gedistribueerde data systemen, optimaliseert consistency vs availability
   - name: Integration Patterns
     levels:
-      basic: Begrijpt basis integration concepten (REST, messaging)
-      decent: Past Enterprise Integration Patterns toe, begrijpt synchrone vs asynchrone communicatie
-      good: Ontwerpt complexe integraties, implementeert saga patterns
-      excellent: Definieert integration strategie, architecteert enterprise service bus oplossingen
+      basis: Begrijpt basis integration concepten (REST, messaging)
+      redelijk: Past Enterprise Integration Patterns toe, begrijpt synchrone vs asynchrone communicatie
+      goed: Ontwerpt complexe integraties, implementeert saga patterns
+      uitstekend: Definieert integration strategie, architecteert enterprise service bus oplossingen
   - name: Message Brokers
     levels:
-      basic: Gebruikt bestaande message queues voor async communicatie
-      decent: Configureert Kafka/RabbitMQ, begrijpt pub/sub en point-to-point patterns
-      good: Ontwerpt event streaming architecturen, implementeert message ordering en idempotency
-      excellent: Architecteert enterprise messaging platforms, definieert event-driven strategieën
+      basis: Gebruikt bestaande message queues voor async communicatie
+      redelijk: Configureert Kafka/RabbitMQ, begrijpt pub/sub en point-to-point patterns
+      goed: Ontwerpt event streaming architecturen, implementeert message ordering en idempotency
+      uitstekend: Architecteert enterprise messaging platforms, definieert event-driven strategieën
   - name: Event-Driven Architecture
     levels:
-      basic: Begrijpt basis event concepten en async messaging
-      decent: Implementeert event publishers en consumers met message brokers
-      good: Ontwerpt event-driven systemen, implementeert event choreography
-      excellent: Architecteert complexe event-driven platforms, definieert event governance
+      basis: Begrijpt basis event concepten en async messaging
+      redelijk: Implementeert event publishers en consumers met message brokers
+      goed: Ontwerpt event-driven systemen, implementeert event choreography
+      uitstekend: Architecteert complexe event-driven platforms, definieert event governance
